# DataJobRadar

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
analytics/engine/: __init__.py  duckdb_engine.py
analytics/queries/: __init__.py  kennzahlen.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin_visites.py  cities.py  companies.py  jobs.py  nutzer.py  quellen_status.py  router.py  skills.py  stats.py  trends.py
backend/app/core/: abhaengigkeiten.py  cache.py  errors.py  middleware.py
backend/app/schemas/: __init__.py  antworten.py
backend/app/services/: __init__.py  jobs_service.py  stats_service.py
data_lake/: pyproject.toml
data_lake/bronze/: __init__.py  schreiber.py
data_lake/gold/: __init__.py  materialisierung.py
data_lake/silver/: __init__.py  normalisieren.py
docs/: airflow_dag.drawio  api.md  architektur.drawio  architektur.md  datenfluss.drawio  datenfluss.md  datenmodell.drawio  deployment.drawio  deployment.md  medallion.drawio  setup.md
docs/adr/: 0001-duckdb-als-warehouse.md  0002-frontend-statisch-im-backend.md  0003-airflow-local-executor.md  0004-skill-taxonomie.md
frontend/: next.config.js  package.json  tailwind.config.ts
infra/docker/: airflow.Dockerfile  backend.Dockerfile  requirements-airflow.txt  requirements-backend.txt
ingestion/: pipeline.py  pyproject.toml
ingestion/adzuna/: __init__.py  client.py  suchen.py
ingestion/arbeitnow/: client.py
ingestion/base/: __init__.py  client.py
ingestion/bundesagentur/: client.py
ingestion/jobicy/: client.py
ingestion/jooble/: client.py
ingestion/jsearch/: client.py
ingestion/muse/: client.py
ingestion/quota/: tracker.py
ingestion/remoteok/: client.py
ingestion/remotive/: client.py
ingestion/validation/: __init__.py  schemata.py
shared/python/djr_core/: pyproject.toml
shared/python/djr_core/djr_core/: __init__.py  config.py  exceptions.py  logging.py  models.py  utils.py
skills/: __init__.py  extraktor.py  taxonomie.py
tests/: conftest.py
(+56 files in other folders)
