[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djr-data-lake"
version = "0.1.0"
description = "Data Job Radar Deutschland - Data Lake Schichten"
requires-python = ">=3.11"
dependencies = [
  "djr-core",
  "pyarrow>=16.1",
  "duckdb>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bronze*", "silver*", "gold*"]
