[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djr-ingestion"
version = "0.1.0"
description = "Data Job Radar Deutschland - Ingestion"
requires-python = ">=3.11"
dependencies = [
  "djr-core",
  "httpx>=0.27",
  "tenacity>=8.3",
  "pyarrow>=16.1",
  "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adzuna*", "validation*"]
