[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djr-core"
version = "0.1.0"
description = "Data Job Radar Deutschland - geteilte Kernbibliothek"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "orjson>=3.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["djr_core*"]
